--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,7 @@
-<app-header></app-header>
-<main>
-  <router-outlet></router-outlet>
-</main>
-<app-footer></app-footer>
+<div class="min-h-screen flex flex-col">
+  <app-header></app-header>
+  <main class="flex-1 pt-24">
+    <router-outlet></router-outlet>
+  </main>
+  <app-footer></app-footer>
+</div>
